# kausalayer-resolver-network

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
circuits/ownership/: compute-input.js  export-vk-rust.js  ownership.circom  package-lock.json  package.json  serialize-proof.js
programs/krn/: Cargo.toml
programs/krn/src/: lib.rs
programs/krn/src/errors/: mod.rs
programs/krn/src/instructions/: aggregate_resolution.rs  claim_winning.rs  close_market.rs  fallback_resolve.rs  init_market.rs  mod.rs  ownership_verifier.rs  place_bet.rs  refund_market.rs  sp1_verifier.rs  submit_proof.rs  verifier.rs
programs/krn/src/state/: commitment.rs  market.rs  mod.rs  proof.rs
prover-service/: .env.example  package-lock.json  package.json  sources.json
prover-service/src/: config.ts  fetcher.ts  index.ts  monitor.ts  prover.ts  submitter.ts
prover/reclaim/: package-lock.json  package.json  prepare-onchain.js  proof-onchain.json  test-verify-offchain.js  test-zkfetch-detail.js  test-zkfetch.js
tests/: krn-comprehensive.ts  krn-e2e-full-cycle.ts  krn-e2e-sports.ts  krn-e2e-zktls.ts  krn-e2e.ts  krn-sp1-zktls.ts  krn.ts
zktls-prover/output/: vkey_hash.txt
zktls-prover/program/: Cargo.toml
zktls-prover/program/src/: main.rs
zktls-prover/script/: Cargo.toml
zktls-prover/script/src/: main.rs
zktls-prover/testdata/: input-coingecko.json  input-espn-nba.json
