[package]
name = "krn"
version = "0.1.0"
description = "KausaLayer Resolver Network - ZK resolution for prediction markets on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "krn"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-mode = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
solana-sha256-hasher = "2"
solana-keccak-hasher = "2"
solana-secp256k1-recover = "2"
groth16-solana = "0.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
