[package]
name = "krn-zktls-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
zktls-replayable-tls = { git = "https://github.com/the3cloud/zkvm-programs.git", tag = "v0.2.5" }
zktls-program-core = { git = "https://github.com/the3cloud/zkvm-programs.git", tag = "v0.2.5" }
sp1-zkvm = "6.1.0"
rsa = "0.9.6"
ciborium = "0.2.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
alloy-primitives = "=0.8.23"

[workspace]

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-6.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-6.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-6.0.0" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-sp1-6.0.0" }
